# ESTAR-JOLO

./: .gitignore  README.md  linkedin_post.md  pyproject.toml
estar/: __init__.py  classifier.py  features.py  generator.py  ollama_generator.py  utils.py
examples/: quickstart.py
results/: estar_summary.json
results/estar_classifier/: meta.json  model.txt
scripts/: benchmark.py  demo.py  demo_ollama.py  generate_training_data.py  make_linkedin_graph.py  test_and_graph.py  train_classifier.py  tune_threshold.py
tests/: test_features.py  test_ollama_helpers.py
