[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "estar-lite"
version = "0.1.0"
description = "ESTAR-LITE: Early-Stopping Token-Aware Reasoning for Efficient LLM Inference"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "estar-lite contributors"}]
keywords = ["llm", "reasoning", "early-stopping", "efficiency", "lightgbm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "lightgbm>=4.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "tqdm",
    "datasets",
]

[project.optional-dependencies]
vllm = ["vllm>=0.4"]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
include = ["estar*"]
